# gg-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Headers/: Mesh.hpp  Shader.hpp  main.hpp
Shaders/: cube.frag
Sources/: debug.cpp  main.cpp
doc/: PURPOSE  style.md
hooks/: README.md  pre-commit  pre-commit-clang-format.sh
inc/: debug.hpp
include/: PURPOSE
lib/: CMakeLists.txt  PURPOSE  init.sh
res/: PURPOSE
res/glsl/: 1to1_tex.vert  PURPOSE  flat_red.frag  ivec3_1to1.vert  lit_mtl.frag  tex.frag  tex.vert
src/: Camera.cpp  Camera.h  CubeMesh.cpp  DirLight.cpp  Entity.h  Mesh.cpp  Mesh.h  PURPOSE  PointLight.cpp  Pool.cpp  Pool.h  Shader.cpp  Shader.h  SpotLight.cpp  Timer.cpp  Transform.cpp  Transform.h  Viewport.h  debug.cpp  debug.h  io.cpp  io.h  main.cpp  render.cpp  render.h  ui.cpp  ui.h
src/ai/: AI.cpp  AI.h  AIComp.h  Agent.cpp  Agent.h  BVH.cpp  BVH.h  BoundVolume.cpp  BoundVolume.h  Dynamics.h  GMP.cpp  GMP.h  LMP.cpp  LMP.h  Object.cpp  Object.h  PRM.cpp  PRM.h  ai.cpp  ai.h  physics.cpp  physics.h
src/demo/: demo.cpp  demo.h
src/light/: DirLight.cpp  DirLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h
src/model/: CubeMesh.cpp  CubeMesh.h  LineMesh.cpp  LineMesh.h  Mesh.cpp  Mesh.h
src/util/: Graph.h  Seeder.cpp  Seeder.h  Timer.cpp  Timer.h  debug.cpp  debug.h
test/: PURPOSE
tools/: README.md
